--- a/src/app/enithy/components/home/home.component.html
+++ b/src/app/enithy/components/home/home.component.html
@@ -2,6 +2,6 @@
 <ul>
     <li><a routerLink="users">Users</a></li>
     <li><a routerLink="posts">Posts</a></li>
-    <li><a routerLink="commments">Commments</a></li>
+    <li><a routerLink="comments">Commments</a></li>
 </ul>
 <router-outlet></router-outlet>
