--- a/src/app/enithy/components/single-post/single-post.component.html
+++ b/src/app/enithy/components/single-post/single-post.component.html
@@ -1,6 +1,7 @@
-<div>
-    <p>id : {{post.id}} </p>
-    <p>userId : {{post.userId}} </p>
-    <p>title : {{post.title}} </p>
-    <hr>
+<div class="element-wrap">
+    <div class="element-content">
+        <p>id : {{post.id}} </p>
+        <p>userId : {{post.userId}} </p>
+        <p>title : {{post.title}} </p>
+    </div>
 </div>
