--- a/src/app/enithy/components/single-user/single-user.component.html
+++ b/src/app/enithy/components/single-user/single-user.component.html
@@ -1,13 +1,14 @@
-<div>
-    <p>id: {{user.id}}</p>      
-    <p>name: {{user.name}} </p>
-    <p>username: {{user.username}}</p> 
-    <p>email: {{user.email}} </p> 
-    <p>phone: {{user.phone}}</p> 
-    <p>website: {{user.website}}</p>
-    <p>Adress</p>  
-    <p>street: {{user.address.street}}, suite: {{user.address.suite}}, city: {{user.address.city}} </p>  
-    <p>Company</p>
-    <p>Company name: {{user.company.name}}, catchPhrase: {{user.company.catchPhrase}}, bs: {{user.company.bs}} </p> 
-    <hr>
+<div class="element-wrap"> 
+    <div class="element-content">
+        <p>id: {{user.id}}</p>      
+        <p>name: {{user.name}} </p>
+        <p>username: {{user.username}}</p> 
+        <p>email: {{user.email}} </p> 
+        <p>phone: {{user.phone}}</p> 
+        <p>website: {{user.website}}</p>
+        <p>Adress</p>  
+        <p>street: {{user.address.street}}, suite: {{user.address.suite}}, city: {{user.address.city}} </p>  
+        <p>Company</p>
+        <p>Company name: {{user.company.name}}, catchPhrase: {{user.company.catchPhrase}}, bs: {{user.company.bs}} </p> 
+    </div>
 </div>
