--- a/src/app/enithy/components/home/home.component.html
+++ b/src/app/enithy/components/home/home.component.html
@@ -1,5 +1,6 @@
 <h1>Home page</h1>
 <ul>
+    <li><a routerLink="">Home</a></li>
     <li><a routerLink="users">Users</a></li>
     <li><a routerLink="posts">Posts</a></li>
     <li><a routerLink="comments">Commments</a></li>
