add posts into user

--- a/src/app/enithy/components/single-post/single-post.component.html
+++ b/src/app/enithy/components/single-post/single-post.component.html
@@ -1,7 +1,7 @@
-<div class="element-wrap">
+<div class="element-wrap post-in-user" >
     <div class="element-content">
-        <p>id : {{post.id}} </p>
-        <p>userId : {{post.userId}} </p>
-        <p>title : {{post.title}} </p>
+        <p>id : {{post?.id}} </p>
+        <p>userId : {{post?.userId}} </p>
+        <p>title : {{post?.title}} </p>
     </div>
 </div>
