--- a/src/app/enithy/components/single-user/single-user.component.css
+++ b/src/app/enithy/components/single-user/single-user.component.css
@@ -1,6 +1,7 @@
 .btn-comment-toggle{
     padding: .2rem;
     margin: .2rem;
+    text-align:  center;
 }
 .element-wrap .user-posts{
     margin: 2rem;
