--- a/src/app/enithy/components/single-comment/single-comment.component.html
+++ b/src/app/enithy/components/single-comment/single-comment.component.html
@@ -1,9 +1,9 @@
-<div class="element-wrap">
-    <div class="element-content">
-        <p>Id: {{comment.postId}}</p>
-        <p>postId: {{comment.id}}</p>
-        <p>name: {{comment.name}}</p>
-        <p>email: {{comment.email}}</p>
-        <p>body: {{comment.body}}</p>
+<div class="element-wrap comment-wrap">
+    <div class="comment-content">
+        <p>Id: {{comment?.postId}}</p>
+        <p>postId: {{comment?.id}}</p>
+        <p>name: {{comment?.name}}</p>
+        <p>email: {{comment?.email}}</p>
+        <p>body: {{comment?.body}}</p>
     </div>
 </div>
